--- a/config/database.yml
+++ b/config/database.yml
@@ -2,7 +2,17 @@ development:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: applepie
+  database: hm_dev
+  pool: 5
+  username: root
+  password: 
+  socket: /var/run/mysqld/mysqld.sock
+
+production:
+  adapter: mysql2
+  encoding: utf8
+  reconnect: false
+  database: hm_dev
   pool: 5
   username: root
   password: 
