--- a/config/database.yml
+++ b/config/database.yml
@@ -5,14 +5,24 @@ development:
   database: hm_dev
   pool: 5
   username: root
-  password: 
+  password: ""
+  socket: /var/run/mysqld/mysqld.sock
+
+test:
+  adapter: mysql2
+  encoding: utf8
+  reconnect: false
+  database: hm_test
+  pool: 5
+  username: root
+  password: ""
   socket: /var/run/mysqld/mysqld.sock
 
 production:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: hm_dev
+  database: hm_pro
   pool: 5
   username: root
   password: 
