--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
 language: ruby
 rvm:
   - 2.0.0
+
+before_script:
+  - mysql -e 'create database hm_test;'
+
+script:
+  RAILS_ENV=test bundle exec rake spec spec
